[tool.poetry]
name = "mre"
version = "0.1.0"
description = ""
authors = ["Mark Fomin <mark@difhel.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "^3.10.4"
pymongo = "^4.6.2"
aiogram = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
